Update routes Update swagger @Todo update services and repositoryies
